@@ -1,5 +1,12 @@
 2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>
 
+	Fixed bug with panel autodetection using
+	ViaPanelGetNativeModeFromScratchPad function
+
+	* src/via_panel.c:
+
+2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>
+
 	Fixed problem with backlite (Ticket #308)
 
 	* src/via_lvds.c: (ViaLVDSSoftwarePowerFirstSequence),
